k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: bantu-production
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagesPullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          # Image construite et hébergée sur Guithub Container Registry
          image: ghcr.io/badingaguyde-glitch/myeventsapp/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
        
          # Injection automatique de toutes les variables et de tous les secrets
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5

          #  Sonde de vie 'L'API a-t=t-elle crashé ou gelé ?*
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10

          # Contrôle strict de mémoire (128 Mo min, 256 Mo max par pod)
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bantu-production
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
