k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bantu-ingress
  namespace: bantu-production
  annotations:
    # Indique à kubernetes d'utiliser Traefik (intégré d'office dans k3s)
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 138-68-145-245.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
